--- a/popup-23.css
+++ b/popup-23.css
@@ -1,4 +1,17 @@
-/* WOOT Modal Popup */
+/**
+ * @summary     Popup23
+ * @description pure javascript popup window
+ * @version     1.0.1
+ * @file        popup-23
+ * @author      Rostislav Sofronov <realmag777>
+ * @contact     https://pluginus.net/contact-us/
+ * @github      https://github.com/realmag777/popup-23
+ * @copyright   Copyright 2022 PluginUs.NET
+ *
+ * This source file is free software, available under the following license:
+ * MIT license - https://en.wikipedia.org/wiki/MIT_License
+ */
+
 .woot-modal-backdrop {
     position: fixed;
     top: 0;
@@ -26,20 +39,44 @@
 }
 
 @-webkit-keyframes woot_modal_pop {
-    0%   { -webkit-transform:scale(0.8); opacity:0; }
-    100% { -webkit-transform:scale(1); opacity:1;  }
+    0%   {
+        -webkit-transform:scale(0.8);
+        opacity:0;
+    }
+    100% {
+        -webkit-transform:scale(1);
+        opacity:1;
+    }
 }
 @-moz-keyframes woot_modal_pop {
-    0%   { -moz-transform:scale(0.8); opacity:0; }
-    100% { -moz-transform:scale(1); opacity:1;  }
+    0%   {
+        -moz-transform:scale(0.8);
+        opacity:0;
+    }
+    100% {
+        -moz-transform:scale(1);
+        opacity:1;
+    }
 }
 @-o-keyframes woot_modal_pop {
-    0%   { -o-transform:scale(0.8); opacity:0; }
-    100% { -o-transform:scale(1); opacity:1;  }
+    0%   {
+        -o-transform:scale(0.8);
+        opacity:0;
+    }
+    100% {
+        -o-transform:scale(1);
+        opacity:1;
+    }
 }
 @keyframes woot_modal_pop {
-    0%   { transform:scale(0.8); opacity:0; }
-    100% { transform:scale(1); opacity:1;  }
+    0%   {
+        transform:scale(0.8);
+        opacity:0;
+    }
+    100% {
+        transform:scale(1);
+        opacity:1;
+    }
 }
 
 .woot-modal-inner-header {
@@ -59,21 +96,12 @@
     width: 100%;
     overflow: hidden;
     clear: both;
+    box-sizing: border-box;
+    padding: 5px 0 0 5px;
 }
 
-.woot-modal .woot-modal-inner-footer .button-large {
-    padding: 0 35px 2px;
-}
-
-.woot-modal .woot-modal-inner-footer .woot-modal-button-large-1 {
-    float: right;
-    margin: 9px 11px 0 0;
-    font-size: 0.95em;
-}
-
-.woot-modal .woot-modal-inner-footer .button-large-2 {
-    float: left;
-    margin: 9px 0 0 11px;
+.woot-modal .woot-modal-inner-footer .woot-btn {
+    margin: 7px 0 0 7px;
 }
 
 .woot-modal-inner-content {
@@ -86,7 +114,7 @@
     bottom: 50px;
 }
 
-.woot-modal-close {
+.woot-modal-inner-header .woot-modal-close {
     position: absolute;
     top: 0;
     right: 0;
@@ -99,27 +127,29 @@
     transition-duration: 0s;
 }
 
-.woot-modal-close:focus {
+.woot-modal-inner-header .woot-modal-close:focus {
     outline: none;
     box-shadow: none;
 }
 
-.woot-modal-close::before {
+.woot-modal-inner-header .woot-modal-close::before {
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    font-size: 22px;
+    font-size: 16px;
     color: #ccc;
     text-align: center;
     display: inline-block;
     vertical-align: top;
-    content: "x";
+    content: "🗙";
     -webkit-transition: color .25s ease;
     transition: color .25s ease;
 }
 
-.woot-modal-close:hover::before { color: #cb4a1f; }
+.woot-modal-inner-header .woot-modal-close:hover::before {
+    color: #cb4a1f;
+}
 
 .woot-modal-title {
     position: absolute;
@@ -174,7 +204,9 @@
     clear: both;
 }
 
-.woot-form-element-container > p { color: #777; }
+.woot-form-element-container > p {
+    color: #777;
+}
 
 .woot-form-element-container:hover {
     background-color: #fcfcfc;
