--- a/popup-23.css
+++ b/popup-23.css
@@ -89,7 +89,7 @@
     right: 0;
     height: 25px;
     width: 25px;
-    line-height: 25px;
+    line-height: normal;
     outline: none;
     transition-duration: 0s;
 }
