--- a/popup-23.css
+++ b/popup-23.css
@@ -14,16 +14,19 @@
 
 .popup23 {
     position: fixed;
+    /*
     top: 50px;
+    bottom: 50px;
     left: 10%;
     right: 10%;
+    */
     z-index: 15001;
     background: #fff;
     min-height: 240px;
     min-width: 320px;
     overflow: auto;
-    bottom: 50px;
     animation: popup23_modal_pop 0.45s 1 cubic-bezier(0.175, 0.885, 0.320, 1.275);
+    border: solid 2px #eee;
 }
 
 @keyframes popup23_modal_pop {
