--- a/popup-23.css
+++ b/popup-23.css
@@ -1,12 +1,12 @@
 /**
  * @summary     Popup23
  * @description pure javascript popup window
- * @version     1.0.5
+ * @version     1.0.7
  * @file        popup-23
  * @author      Rostislav Sofronov <realmag777>
  * @contact     https://pluginus.net/contact-us/
  * @github      https://github.com/realmag777/popup-23
- * @copyright   Copyright 2023 PluginUs.NET
+ * @copyright   Copyright 2020 - 2023 PluginUs.NET
  *
  * This source file is free software, available under the following license:
  * MIT license - https://en.wikipedia.org/wiki/MIT_License
@@ -122,10 +122,12 @@
     margin: 0;
     line-height: 53px;
     left: 14px;
-    color: #555;
     padding: 0;
     font-size: 21px;
     font-weight: bold;
+    user-select: none;
+    text-transform: uppercase;
+    color: #3f3f3f;
 }
 
 .popup23-title-info {
@@ -137,6 +139,11 @@
     color: #999;
     padding: 0;
     font-size: 15px;
+}
+
+.popup23-title span{
+    display: inline-block;
+    margin-right: 7px;
 }
 
 .popup23-content {
@@ -156,7 +163,7 @@
 
 .popup23-content {
     height: 100%;
-    padding: 18px 20px;
+    padding: 11px 10px;
     box-sizing: border-box;
     position: relative;
     background-color: #fff;
@@ -181,7 +188,96 @@
     color: #333;
 }
 
-.popup23-footer-button-close{
+.popup23-footer-button-right{
     float: right;
+}
+
+.popup23-footer-button-left{
+    float: left;
+}
+
+
+
+/********** TABS **********/
+
+.popup23-tabset,
+.popup23-tab-panels,
+.popup23-tab-panel{
+    height: 100%;
+}
+
+.popup23-tabset > input[type="radio"] {
+    position: absolute;
+    left: -200vw;
+}
+
+.popup23-tabset .popup23-tab-panel {
+    display: none;
+}
+
+.popup23-tabset > input:first-child:checked ~ .popup23-tab-panels > .popup23-tab-panel:first-child,
+.popup23-tabset > input:nth-child(3):checked ~ .popup23-tab-panels > .popup23-tab-panel:nth-child(2),
+.popup23-tabset > input:nth-child(5):checked ~ .popup23-tab-panels > .popup23-tab-panel:nth-child(3),
+.popup23-tabset > input:nth-child(7):checked ~ .popup23-tab-panels > .popup23-tab-panel:nth-child(4),
+.popup23-tabset > input:nth-child(9):checked ~ .popup23-tab-panels > .popup23-tab-panel:nth-child(5),
+.popup23-tabset > input:nth-child(11):checked ~ .popup23-tab-panels > .popup23-tab-panel:nth-child(6) {
+    display: block;
+}
+
+.popup23-tabset > label {
+    position: relative;
+    display: inline-block;
+    padding: 21px 20px;
+    border: none;
+    border-bottom: 0;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.popup23-tabset > label::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    width: 98%;
+    height: 4px;
+    background: #8d8d8d;
+}
+
+input:focus-visible + label {
+    outline: 2px solid rgba(0, 102, 204, 1);
+    border-radius: 3px;
+}
+
+.popup23-tabset > label:hover,
+.popup23-tabset > input:focus + label,
+.popup23-tabset > input:checked + label {
+    color: #06c;
+}
+
+.popup23-tabset > label:hover::after,
+.popup23-tabset > input:focus + label::after,
+.popup23-tabset > input:checked + label::after {
+    background: #06c;
+}
+
+.popup23-tabset > input:checked + label {
+    border: none;
+}
+
+.popup23-tab-panel {
+    padding: 30px 0;
+    /* border-top: 1px solid #ccc; */
+}
+
+.popup23-tab-panels > section{
+    padding: 9px 0;
+}
+
+.popup23-tabset input[type=radio]+label{
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+    margin-bottom: 0 !important;
+    margin-top: -27px !important;
 }
 
